# hh-bot

./: .gitignore  AI_GUIDLINES.md  Justfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: ab3729d34f0c_add_cv_table.py
bot/db/: __init__.py  cv_repository.py  database.py  models.py  search_query_repository.py  user_repository.py
bot/handlers/: __init__.py  echo.py  help.py  location.py  start.py
bot/handlers/profile/: __init__.py  common.py  edit_profile.py  keyboards.py  preferences.py  search_settings.py  states.py  view.py
bot/handlers/profile/edit/: __init__.py  cancel.py  city.py  contacts.py  llm.py  name.py  position.py  resume.py  skills.py
bot/handlers/profile/keyboards/: __init__.py  llm.py  preferences.py  profile.py  resume.py  search.py  skills.py
bot/handlers/profile/preferences/: __init__.py  common.py  language.py  schedule.py  view.py
bot/handlers/search/: __init__.py  commands.py  common.py  helpers.py  pagination.py  run_search.py  vacancy.py
bot/handlers/search/vacancy/: detail.py  documents.py  prompts.py
bot/services/: hh_service.py  openai_service.py  search_service.py
bot/tasks/: vacancy_delivery.py
bot/utils/: i18n.py  lang.py  profile_edit.py  profile_helpers.py  prompt_loader.py  scheduler.py  time.py
bot/utils/search/: __init__.py  query_state.py  search_cache.py  search_db.py  search_format.py  search_service.py
i18n/en/: help.yml  location.yml  profile.yml  search.yml  start.yml
i18n/ru/: help.yml  location.yml  profile.yml  search.yml  start.yml
prompts/: analyze_vacancy_system.txt  cv_prompt.txt  user_response_system.txt
tools/: clear_db.py
tools/i18n/: check_i18n.py
